[Client] FIX: Scroll Indicator z-index 미적용 수정

--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -3,7 +3,7 @@
 }
 
 .main {
-  min-height: 100vh;
+  min-height: 95vh;
   display: flex;
   width: 40vw;
   margin: 0 4.6% 0 0;
@@ -129,12 +129,12 @@
   width: 100%;
   list-style-type: none;
   justify-content: flex-end;
+  font-size: 1.3vw;
 }
 
 .nav_menu {
-  font-size: 1.3vw;
   display: flex;
-  padding-top: 2.5%;
+  padding-top: 3%;
   padding-left: 3vw;
   text-decoration: none;
 }
@@ -147,6 +147,7 @@
   margin-top: 4.6vw;
   position: fixed;
   width: 100%;
+  z-index: 1;
 }
 
 .progress_bar {
@@ -156,6 +157,7 @@
   border-radius: 25px;
   transition: width 0.1s ease;
   opacity: 0.9;
+  /* z-index: 1; */
 }
 
 /* ------------------------------------------------------------ */
